# aoc_2015_rust

./: Cargo.toml  output
src/: ex6.rs  ex7.rs
src/2015/: ex6.rs  ex7.rs  ex8.rs  ex9.rs
src/2022/: ex5.rs
