[package]
name = "aoc_2015"
version = "0.1.0"
edition = "2021"

[dependencies]
indoc = "2.0.5"
once_cell = "1.19.0"
regex = "1.10.6"

[[bin]]
name="2015ex6"
path="src/2015/ex6.rs"

[[bin]]
name="2015ex7"
path="src/2015/ex7.rs"

[[bin]]
name="2015ex8"
path="src/2015/ex8.rs"

[[bin]]
name="2015ex9"
path="src/2015/ex9.rs"

[[bin]]
name="2022ex5"
path="src/2022/ex5.rs"
